run sbt from java